# hannoon-ai

./: .env.example  .gitignore  README.md  classify_events.py  classify_topics.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: feeds.json
docs/: topic_classification_overview.md
models/: README.md
scripts/: backfill_summaries.py
src/: embedding.py  summary_utils.py
src/abuse_detector/: __init__.py  pipeline.py  predictor.py
src/collector/: ai_worker.py  article_ai_pipeline.py  article_llm.py  cli.py  content_cleaner.py  crawler.py  rss.py  settings.py  storage.py  utils.py
src/db/: articles.py  events.py  topic_causes.py  topics.py
src/event_classifier/: pipeline.py  prompts.py  settings.py
src/openai_client/: client.py
src/summarizer/: __init__.py  extractive.py
src/topic_classifier/: cli.py  pipeline.py  prompts.py  settings.py
tests/: test_summary_quality.py
