[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hannoon-ai"
version = "0.1.0"
dependencies = [
    "feedparser==6.0.11",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "python-dateutil==2.9.0.post0",
    "psycopg[binary]==3.2.3",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
